# inspect_galah_dr4

./: README.rst  pyproject.toml
docs/source/: index.rst  usage.rst
src/inspect_galah_dr4/: download_from_galah_dr4.py
