[project]
name = "inspect_galah_dr4"
version = "2023.5.1"
authors = [
  { name="Sven Buder", email="sven.buder@anu.edu.au" },
]
description = "A package to download GALAH DR4 analysis products and plot them"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
